exports[`test CardCount renders as before 1`] = `
<div
  className="card-count">
  5 cards remaining
</div>
`;

exports[`test CardCount renders as before 2`] = `
<div
  className="card-count">
  0 cards remaining
</div>
`;
